# k230-bare-metal

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh  clocks.yaml  gen-big-core-app.sh  gen-small-core-img.sh  genimage.py  genimage2.py  interrupts.yaml  link.x  riscv64gcv-unknown-none-elf.json  rust-toolchain.toml  xx.py
.cargo/: config.toml
.github/workflows/: ci.yml
app/: Cargo.toml  build.rs  link-cpu1.x
app/.cargo/: config.toml
app/src/: mailbox_console.rs  main.rs  rt.rs  ruacpu.rs  rvv.rs
k230_boot/: Cargo.toml
k230_boot/src/: bootinfo.rs  console.rs  lib.rs  rt.rs
k230_boot/src/ddr_init/: canmv_ddr_2133.rs  canmv_v3p0_lpddr4_2667.rs  mod.rs
k230_kernel/: Cargo.toml
k230_kernel/src/: console.rs  lib.rs
pac/src/: boot_v0.rs  clint.rs  cmu_v0.rs  gpio_v0.rs  i2c_dw.rs  iomux_v0.rs  lib.rs  plic.rs  pwm_v0.rs  pwr_v0.rs  rmu_v0.rs  tsensor_v0.rs  uart_dw.rs
registers/: boot_v0.yaml  clint_v0.yaml  cmu_v0.yaml  gpio_v0.yaml  iomux_v0.yaml  mailbox_v0.yaml  plic_v0.yaml  pwm_v0.yaml  pwr_v0.yaml  rmu_v0.yaml  tsensor_v0.yaml
src/: BANNER  board_gpio.rs  boot.rs  commands.rs  embassy_led.rs  embassy_runtime.rs  embassy_time_driver_impl.rs  i2c.rs  mailbox_console.rs  main.rs  readline.rs  rt.rs  serial.rs  time.rs
src/ddr_init/: cammv.rs  cammv_ddr_2133.rs  canmv_v3p0_lpddr4_2667.rs  mod.rs
tools/: k230_serial_load.py
