[workspace]
members = ["pac", "app"]

[package]
name = "k230-bare-metal"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "1.0.0"
embedded-io = "0.7.1"
critical-section = "1.2.0"
embassy-sync = "0.7.2"
embassy-time-driver = { version = "0.2.2", features = ["tick-hz-1_000_000"] }
embassy-time-queue-utils = { version = "0.3.2", features = ["generic-queue-8"] }
num-traits = { version = "0.2.19", default-features = false }
pac = { path = "./pac" }
riscv = { version = "0.16.1", features = ["critical-section-single-hart"] }
